--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,3 +17,4 @@ jobs:
     - name: podman
       run: |
         sudo apt-get install podman
+        podman run docker.io/library/ubuntu:latest /bin/echo "Hello World"
